--- a/Youtube-mp3/src/App.css
+++ b/Youtube-mp3/src/App.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+*{
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  background: linear-gradient(to bottom, hsl(0, 100%, 50%), hsl(240, 100%, 50%));
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -8,8 +18,29 @@
 
 .visible{
   display: block;
+  margin-top: 30px;
+  font-size: larger;
 }
 
 .hidden{
   display: none;
+}
+
+
+form{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+form input{
+  padding: 1em;
+}
+
+form button{
+  background-color: red;
+  width: 32%;
+  align-self: center;
+  padding: 10px;
+  margin-top: 20px;
 }
